# tamtour-livestreaming

./: .gitignore  LICENSE  README.md  control.html  example.json  source.html
browsersource/: index.html  source.html
controlpanel/: control.html  index.html
startlistmanager/: MANIFEST.in  pyproject.toml  setup.cfg
startlistmanager/tamtour_startlistmanager/: admin.py  apps.py  conf.py  decorators.py  enums.py  models.py  urls.py  views.py  views_admin.py  views_api.py  youtube.py
startlistmanager/tamtour_startlistmanager/management/commands/: _base.py  tamtour_import_compositions.py  tamtour_import_klakom.py  tamtour_import_startlist.py  tamtour_import_startlist_v2.py
startlistmanager/tamtour_startlistmanager/migrations/: 0002_better_group_support.py  0003_komposition_typ_alter_komposition_klakomtitel_and_more.py  0004_wettspielkategorie_default_composition_type.py  0005_startliste_overlay_title_and_more.py  0006_apikey_ytaccount_ytstreamgroup_ytstream_and_more.py  0007_alter_startliste_visible_and_more.py
startlistmanager/tamtour_startlistmanager/templates/admin/tamtour_startlistmanager/startliste/: change_form.html
startlistmanager/tamtour_startlistmanager/templates/admin/tamtour_startlistmanager/ytaccount/: change_form.html
startlistmanager/tamtour_startlistmanager/templates/admin/tamtour_startlistmanager/ytstream/: change_form.html
startlistmanager/tamtour_startlistmanager/templates/admin/tamtour_startlistmanager/ytstreamgroup/: change_form.html
startlistmanager/tamtour_startlistmanager/templates/tamtour_startlistmanager/: print.html
(+60 files in other folders)
