[metadata]
name = tamtour-startlistmanager
version = file: _version.txt
description = Startlistenmanager für die TamTour
long_description = file: README.md
long_description_content_type = text/markdown
author = Rafael Urben
author_email = github@rafaelurben.ch
maintainer = Rafael Urben
maintainer_email = github@rafaelurben.ch
license = MIT License

[options]
setup_requires =
    setuptools
python_requires = >= 3.10
include_package_data = true
packages = find:
